--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,4 +8,7 @@
 - include: setup-Ubuntu.yml
   when: ansible_distribution == 'Ubuntu'
 
+- include: setup-Alpine.yml
+  when: ansible_distribution == 'Alpine'
+
 - include: configuration.yml
